--- a/ex07/Makefile
+++ b/ex07/Makefile
@@ -9,7 +9,7 @@ NAME		= replace
 CC			= clang++
 RM			= rm -f
 
-CFLAGS		= -Wall -Wextra -Werror
+CFLAGS		= -Wall -Wextra -Werror -std=c++98
 
 .cpp.o:
 			${CC} ${CFLAGS} -c $< -o ${<:.cpp=.o}
